# ws_chat_room

./: README.md
backend/: Cargo.toml
backend/self_signed_cert/: cert.pem  key.pem
backend/src/: main.rs  server.rs
backend/src/db/: mod.rs
backend/src/handler/: mod.rs
backend/src/handler/api/: get.rs  mod.rs  post.rs
backend/src/handler/static_file/: get.rs  mod.rs
backend/src/room_manager/: mod.rs
backend/src/router/: api.rs  mod.rs  static_file.rs
backend/src/session/: mod.rs
backend/static/: index.html
backend/static/assets/: index-B3osCNoI.css  index-BCuRTTp_.js  index-BsBgXCYH.js  index-C6G9RKAB.css  index-C_-bIcsx.js  index-D0UHYaF2.css  index-DISq45uZ.js  index-DZwKlUfZ.css  index-ycjcxo0R.css
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: layout.css  layout.jsx  message_card.css  message_card.jsx  room_card.css  room_card.jsx
frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx  home.css  login.css  new_room.css  new_room.jsx  not_found.css  not_found.jsx  room.css  room.jsx  signup.css  signup.jsx
