[package]
name = "ws_chat_room"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
dotenv = "0.15.0"
serde = "1.0.219"
chrono = {version = "0.4.41", features = ["serde"]}
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
uuid = {version = "1.16.0", features=["v4"]}