[package]
name = "ws_chat_room"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version ="0.8", features = ["ws"]}
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = {version = "1", features = ["full"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid" ] }
dotenv = "0.15.0"
serde = "1.0.219"
chrono = {version = "0.4.41", features = ["serde"]}
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
uuid = {version = "1.16.0", features=["v4"]}
serde_json = "1.0.140"
